Deprecation cleanup: do not use java.net.URL constructors